[gd_scene load_steps=3 format=3 uid="uid://bu60p87wsanon"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_luvgp"]
[ext_resource type="FontFile" uid="uid://yhhpudnvmaps" path="res://resources/fonts/SpecialElite-Regular.ttf" id="2_bhm08"]

[node name="main" type="Node2D"]
script = ExtResource("1_luvgp")

[node name="MainUI" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="MainUI"]
offset_left = 270.0
offset_top = 74.0
offset_right = 933.0
offset_bottom = 155.0
theme_override_fonts/font = ExtResource("2_bhm08")
theme_override_font_sizes/font_size = 80
text = "DEAD ON ARRIVAL"

[node name="PlayBtn" type="Button" parent="MainUI"]
offset_left = 484.0
offset_top = 224.0
offset_right = 671.0
offset_bottom = 313.0
theme_override_fonts/font = ExtResource("2_bhm08")
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="OptionsBtn" type="Button" parent="MainUI"]
offset_left = 484.0
offset_top = 344.0
offset_right = 671.0
offset_bottom = 433.0
theme_override_fonts/font = ExtResource("2_bhm08")
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="QuitBtn" type="Button" parent="MainUI"]
offset_left = 484.0
offset_top = 464.0
offset_right = 671.0
offset_bottom = 553.0
theme_override_fonts/font = ExtResource("2_bhm08")
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="MainUI/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="MainUI/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="MainUI/QuitBtn" to="." method="_on_quit_btn_pressed"]
